--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,4 +36,17 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="72dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_auto_awesome"
+        android:contentDescription="@string/action_open_random_article"
+        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+        app:layout_anchor="@id/bottom_navigation"
+        app:layout_anchorGravity="right|top" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
