chore: migrating to androidx, appcompat, material

--- a/res/layout/article_view.xml
+++ b/res/layout/article_view.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         />
 
-    <android.support.v4.widget.ContentLoadingProgressBar
+    <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/webViewPogress"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
