--- a/res/layout/action_lookup.xml
+++ b/res/layout/action_lookup.xml
@@ -1,9 +1,9 @@
-<SearchView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.SearchView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fldLookup"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:actionViewClass="android.widget.SearchView"
+    android:actionViewClass="androidx.appcompat.widget.SearchView"
     android:iconifiedByDefault="true"
     android:queryHint="Lookup"
     android:imeOptions="flagNoExtractUi"
-    android:showAsAction="always" />
+    android:showAsAction="ifRoom|collapseActionView" />
