--- a/res/layout/activity_article_collection.xml
+++ b/res/layout/activity_article_collection.xml
@@ -1,14 +1,26 @@
-<androidx.core.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pager"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.core.view.PagerTitleStrip android:id="@+id/pager_title_strip"
-        android:background="@android:drawable/divider_horizontal_dark"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:paddingTop="2dp"
+        app:tabMode="scrollable"
         android:paddingBottom="2dp" />
-
-</androidx.core.view.ViewPager>
+    <androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </androidx.viewpager2.widget.ViewPager2>
+<!--    <androidx.viewpager.widget.PagerTitleStrip android:id="@+id/pager_title_strip"-->
+<!--        android:background="@android:drawable/divider_horizontal_dark"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="top"-->
+<!--        android:paddingTop="2dp"-->
+<!--        android:paddingBottom="2dp" />-->
+</LinearLayout>
