--- a/res/layout/article_view.xml
+++ b/res/layout/article_view.xml
@@ -9,16 +9,15 @@
         />
 
     <androidx.core.widget.ContentLoadingProgressBar
-        android:id="@+id/webViewPogress"
+        android:id="@+id/webViewProgress"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_marginTop="-4dp"
-        android:maxHeight="6dp"
-        android:minHeight="6dp"
+        android:maxHeight="10dp"
+        android:minHeight="10dp"
         android:padding="0dp"
-        android:progressDrawable="@drawable/progress"
         android:indeterminate="false"
         android:max="100"/>
 
