--- a/res/layout/empty_view.xml
+++ b/res/layout/empty_view.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_gravity="center"
     android:background="?android:attr/colorBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:gravity="center"
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <ImageView
             android:src="@drawable/aard2"
             android:id="@+id/empty_icon"
             android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="140px"
+            android:layout_height="140px"
             android:layout_marginRight="6sp"
             android:layout_marginLeft="20sp"
-            />
+            app:tint="@android:color/darker_gray" />
         <TextView
             android:text="Nothing found"
             android:id="@+id/empty_text"
