--- a/res/layout/settings_auto_paste.xml
+++ b/res/layout/settings_auto_paste.xml
@@ -9,7 +9,7 @@
     android:paddingTop="6dip"
     android:orientation="horizontal">
 
-    <CheckedTextView
+    <com.google.android.material.materialswitch.MaterialSwitch
         android:id="@+id/setting_auto_paste"
         android:text="@string/setting_auto_paste"
         android:layout_width="match_parent"
@@ -18,8 +18,6 @@
         android:layout_gravity="left|top"
         android:layout_weight="1"
         android:checked="true"
-        android:button="@null"
-        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
         android:textSize="20sp"/>
 
 </LinearLayout>
