--- a/res/layout/settings_user_styles_item.xml
+++ b/res/layout/settings_user_styles_item.xml
@@ -1,14 +1,13 @@
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/settings_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dip"
-        android:paddingLeft="8dip"
-        android:paddingRight="8dip"
-        android:paddingTop="6dip"
-        android:orientation="vertical"
-        >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/settings_item"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="8dip"
+    android:paddingLeft="8dip"
+    android:paddingRight="8dip"
+    android:paddingTop="6dip"
+    android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,16 +24,18 @@
                 android:layout_gravity="left|top"
                 android:layout_weight="1"
                 android:textSize="20sp"/>
-            <ImageView
+            <com.google.android.material.button.MaterialButton
+                style="?attr/materialIconButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/setting_btn_add_user_style"
                 android:layout_gravity="right|center_vertical"
-                android:paddingTop="6dp"
                 android:paddingLeft="10dp"
+                android:paddingTop="6dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:layout_alignParentRight="true"
+                app:icon="@drawable/add_24px"
                 />
         </LinearLayout>
 
