--- a/res/layout/user_styles_list_item.xml
+++ b/res/layout/user_styles_list_item.xml
@@ -25,13 +25,15 @@
             android:layout_weight="1"
             android:layout_gravity="left|center_vertical"
             />
-        <ImageView
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.IconButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_styles_list_btn_delete"
             android:layout_gravity="right|center_vertical"
             android:padding="10dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:src="@drawable/delete_24px"/>
     </LinearLayout>
 
 </LinearLayout>
