--- a/res/layout/dictionary_list_item.xml
+++ b/res/layout/dictionary_list_item.xml
@@ -19,19 +19,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/dictionary_btn_toggle_fav"
-            android:layout_gravity="top"
-            android:baselineAlignBottom="true"
+            android:gravity="top|left"
             android:paddingRight="6dp"
-            android:layout_marginTop="3dp"
             android:layout_alignParentLeft="true"/>
         <TextView
             android:id="@+id/dictionary_label"
             style="@android:style/TextAppearance.Holo.SearchResult.Title"
             android:textSize="20sp"
-            android:text="WordNet"
-            android:layout_width="wrap_content"
+            android:paddingTop="0px"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:text="tesaha asgfga dgasdgd adhggasgd gagsgdsd"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
+            android:gravity="left|top"
             android:layout_weight="1"/>
         <com.google.android.material.materialswitch.MaterialSwitch
             android:layout_width="wrap_content"
@@ -99,6 +100,7 @@
             android:id="@+id/dictionary_copyright_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             android:layout_marginBottom="2dp"
             >
@@ -107,8 +109,7 @@
                 android:id="@+id/dictionary_copyright_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:baselineAlignBottom="true"
+                android:layout_gravity="left|top"
                 android:layout_marginRight="4dp"
                 android:layout_marginEnd="4dp"
                 android:src="@drawable/copyright_24px"
@@ -117,8 +118,10 @@
             <TextView
                 android:id="@+id/dictionary_copyright"
                 style="@android:style/TextAppearance.Holo.SearchResult.Subtitle"
-                android:text="2014 Wikipedia editors and contributors"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:maxLines="4"
+                android:ellipsize="end"
+                android:layout_gravity="left|top"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 />
@@ -138,7 +141,7 @@
                 android:id="@+id/dictionary_license_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:baselineAlignBottom="true"
+                android:layout_gravity="left|top"
                 android:layout_marginRight="4dp"
                 android:layout_marginEnd="4dp"
                 android:src="@drawable/license_24px"
@@ -147,7 +150,7 @@
                 android:id="@+id/dictionary_license"
                 style="@android:style/TextAppearance.Holo.SearchResult.Subtitle"
                 android:text="Creative Commons with Attribution"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="false"
@@ -167,7 +170,7 @@
                 android:id="@+id/dictionary_source_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:baselineAlignBottom="true"
+                android:layout_gravity="left|top"
                 android:layout_marginRight="4dp"
                 android:layout_marginEnd="4dp"
                 android:src="@drawable/open_in_new_24px"
@@ -196,7 +199,7 @@
                 android:id="@+id/dictionary_path_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:baselineAlignBottom="true"
+                android:layout_gravity="left|top"
                 android:layout_marginRight="4dp"
                 android:layout_marginEnd="4dp"
                 android:src="@drawable/draft_24px"
